--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/meeting
+jdbc.url=jdbc:mysql://66.112.221.83:3306/meeting?serverTimezone=UTC
 jdbc.username=root
-jdbc.password=Woaiqq3guo
+jdbc.password=my.dhu.edu.cn
