--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://66.112.221.83:3306/meeting?serverTimezone=UTC
+jdbc.url=jdbc:mysql://66.112.221.83:3306/meeting?serverTimezone=Asia/Shanghai
 jdbc.username=root
 jdbc.password=my.dhu.edu.cn
